--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,10 @@
 {{ define "main" }}
-<article
-    class="justify-self-center mx-auto px-6 mb-16 sm:px-4 md:px-0 prose dark:prose-invert prose-slate lg:prose-lg hover:prose-a:text-sky-500">
-    <h1>{{ .Title }}</h1>
-    {{ .Content }}
-</article>
+<div class="justify-self-center justify-center mx-auto rounded border-2 border-gray-800 bg-white mb-8 shadow-xl">
+    <div class="bg-gray-800 max-w-none px-6 py-4 text-lg font-medium tracking-wide">
+        <h1 class="text-white"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
+    </div>
+    <article class="prose prose-slate lg:prose-lg hover:prose-a:text-sky-500 max-w-none px-6 pt-6 pb-8">
+        {{ .Content }}
+    </article>
+</div>
 {{ end }}
