--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header class="mx-auto w-screen max-w-screen-2xl px-6 sm:px-7 xl:px-8 2xl:px-10 py-6">
+<header class="mx-auto w-screen max-w-4xl px-6 sm:px-7 xl:px-8 2xl:px-10 pt-16 pb-12">
     {{/* CSS functionality for menu toggle */}}
     <style type="text/css">
         input#nav-toggle:checked~label#show-button {
@@ -15,7 +15,7 @@
     </style>
 
     <nav class="flex items-center justify-between flex-wrap">
-        <a href="{{ .Site.Home.Permalink }}" class="flex items-center text-slate-800 dark:text-slate-200 font-bold">
+        <a href="{{ .Site.Home.Permalink }}" class="flex items-center text-slate-800 dark:text-slate-200 font-bold text-lg">
             {{ .Site.Title }}
         </a>
 
@@ -36,16 +36,17 @@
         </label>
 
         <ul id="nav-menu" class="sm:flex w-full sm:w-auto hidden mt-2 sm:mt-0 sm:space-x-2">
-            {{ with .Site.GetPage "/about" }}
-            <li>
-                <a href="{{ .Permalink }}" class="hover:text-sky-500 dark:hover:text-sky-500">{{ .Title }}</a>
-            </li>
-            {{ end }}
             {{ range .Site.Sections }}
             <li>
                 <a href="{{ .Permalink }}" class="hover:text-sky-500 dark:hover:text-sky-500">{{ .Title }}</a>
             </li>
             {{ end }}
+            {{ with .Site.GetPage "/about" }}
+            <li>
+                <a href="{{ .Permalink }}" class="hover:text-sky-500 dark:hover:text-sky-500">{{ .Title }}</a>
+            </li>
+            {{ end }}
+           
             <li>
                 <label class="sr-only">Theme</label>
                 <button type="button" id="theme-toogle" onclick="changeTheme()"
